# lemin_final

./: CMakeLists.txt  Makefile  README.md  a.out  author  check_repet_val.sh  checker.sh  comments.txt  commons.sh  comparator.sh  lem-in  map_link_start_to_end.txt  out.tmp  ready_ways.txt  repet_val.txt  sort  sort.txt  sub.txt  sub1.txt  sub4.txt  test.c  test.txt  test123.txt  test_big.txt
.print_functions/: print_name_index.c  print_parents.c  print_ready_ways.c
includes/: lemin.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_join.c  ft_memalloc.c  ft_memdel.c  ft_strjoin.c  ft_strsplit.c  ft_strsub.c  get_next_line.c  libft.h
libftprintf/: Makefile  libftprintf.h
libftprintf/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_cleaner.c  ft_cwords.c  ft_getindex.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstcount.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printbits.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  (+28 more)
libftprintf/srcs/: add_zeroes.c  check_if_need_zeroes.c  clean.c  extract_float.c  format_output.c  ft_atoi.c  ft_print_zero_o.c  ft_printf.c  get_len_float.c  get_num_type.c  handle_float.c  handle_fractional.c  handle_whole.c  len_num_base.c  nbr_has_frac_part.c  nbr_has_whole_part.c  normalise_frac.c  normalise_whole.c  output_float.c  parse.c  parse_flags.c  parse_prec.c  parse_size.c  parse_type.c  parse_width.c  print.c  print_binary.c  print_c.c  print_d.c  print_o.c  print_p.c  print_percentage.c  print_s.c  print_space.c  print_space_o.c  print_u.c  print_x.c  print_zero.c  putnbr_base.c  putnbr_float.c  (+2 more)
maps/: test1  test2
maps/invalid/: .start_not_followed_by_room.swp  empty_line_no_tube_to_end  start_not_followed_by_room
src/: .duplicate_rooms copy.c  .duplicate_rooms.c  add_one_way.c  add_to_ready_way.c  add_to_way.c  add_ways_to_graph.c  ants.c  bfs.c  bfs_2.c  bfs_adj_list.c  check_coord.c  connectivity_matrix.c  copy_ways_to_sol.c  create_best_sol.c  create_ready_way.c  create_way.c  del_q.c  del_sol.c  del_way.c  delete_intersections.c  distribute_ants.c  empty_q.c  free_all.c  free_r_ways.c  free_ready_ways.c  ft_exit.c  functions.c  get_options.c  initialize_map.c  lem-in.c  lemin.c  links.c  matrix_to_adj_list.c  move_ants.c  move_ants_help1.c  parse_map_to_struct.c  part_validation.c  pop_q.c  print_adj_list.c  print_adj_list_exit.c  (+15 more)
