cmake_minimum_required(VERSION 3.15)
project(lemin_final C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(libftprintf)
include_directories(libftprintf/float)

add_executable(lemin_final
        includes/lemin.h
        libft/ft_atoi.c
        libft/ft_atoi_base.c
        libft/ft_base_len.c
        libft/ft_bzero.c
        libft/ft_countchar.c
        libft/ft_countwordc.c
        libft/ft_delelemofarray.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_join.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelcontent.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_power.c
        libft/ft_printbits.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_quick_sort.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strchri.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlenc.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnlen.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_swap_point.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_twodarraydel.c
        libft/get_next_line.c
        libft/libft.h
        libftprintf/float/ft_addition_num.c
        libftprintf/float/ft_conversion_powers.c
        libftprintf/float/ft_create_tieee754.c
        libftprintf/float/ft_create_treal.c
        libftprintf/float/ft_delete_tieee754.c
        libftprintf/float/ft_delete_treal.c
        libftprintf/float/ft_get_frac_part.c
        libftprintf/float/ft_get_integer_part.c
        libftprintf/float/ft_get_real_number.c
        libftprintf/float/ft_move_digit.c
        libftprintf/float/ft_normalize_num.c
        libftprintf/float/ft_parse_double.c
        libftprintf/float/ft_parse_float.c
        libftprintf/float/ft_parse_ldouble.c
        libftprintf/float/ft_parse_parts_ieee754.c
        libftprintf/float/ft_parse_power_mantis.c
        libftprintf/float/ft_print_tparts.c
        libftprintf/float/ft_print_tpowers.c
        libftprintf/float/ft_rounding_treal.c
        libftprintf/float/libftfloat.h
        libftprintf/ft_add_full_format_to_buf.c
        libftprintf/ft_add_num_to_buf.c
        libftprintf/ft_add_real_num_to_buf.c
        libftprintf/ft_add_sign_to_buf.c
        libftprintf/ft_add_space_to_buf.c
        libftprintf/ft_add_str_to_buf.c
        libftprintf/ft_add_strn_to_buf.c
        libftprintf/ft_add_to_buf.c
        libftprintf/ft_add_zero_to_buf.c
        libftprintf/ft_calculate_precision.c
        libftprintf/ft_calculate_width.c
        libftprintf/ft_format.c
        libftprintf/ft_format_b.c
        libftprintf/ft_format_basic.c
        libftprintf/ft_format_c.c
        libftprintf/ft_format_d.c
        libftprintf/ft_format_f.c
        libftprintf/ft_format_o.c
        libftprintf/ft_format_p.c
        libftprintf/ft_format_s.c
        libftprintf/ft_format_specifer.c
        libftprintf/ft_format_u.c
        libftprintf/ft_format_x.c
        libftprintf/ft_get_t_real.c
        libftprintf/ft_handling.c
        libftprintf/ft_is_specifer.c
        libftprintf/ft_parse.c
        libftprintf/ft_parse_flags.c
        libftprintf/ft_parse_precision.c
        libftprintf/ft_parse_print.c
        libftprintf/ft_parse_size.c
        libftprintf/ft_parse_types.c
        libftprintf/ft_parse_width.c
        libftprintf/ft_printf.c
        libftprintf/ft_skip_undefined_behavior.c
        libftprintf/ft_varg_c.c
        libftprintf/ft_varg_i.c
        libftprintf/ft_varg_l.c
        libftprintf/ft_varg_ll.c
        libftprintf/ft_varg_s.c
        libftprintf/ft_varg_u.c
        libftprintf/ft_varg_uc.c
        libftprintf/ft_varg_ul.c
        libftprintf/ft_varg_ull.c
        libftprintf/ft_varg_us.c
        libftprintf/ft_write_buf.c
        libftprintf/libftprintf.h
        src/add_one_way.c
        src/add_to_way.c
        src/add_ways_to_graph.c
        src/ants.c
        src/bfs.c
        src/bfs_2.c
        src/bfs_adj_list.c
        src/connectivity_matrix.c
        src/create_best_sol.c
        src/create_way.c
        src/del_q.c
        src/del_sol.c
        src/delete_intersections.c
        src/distribute_ants.c
        src/empty_q.c
        src/free_all.c
        src/free_r_ways.c
        src/ft_exit.c
        src/functions.c
        src/initialize_map.c
        src/lem-in.c
        src/links.c
        src/matrix_to_adj_list.c
        src/move_ants.c
        src/parse_map_to_struct.c
        src/part_validation.c
        src/pop_q.c
        src/print_adj_list.c
        src/print_graph.c
        src/print_map.c
        src/print_matrix.c
        src/print_name_index.c
        src/print_parents.c
        src/print_ready_ways.c
        src/print_shortest_path.c
        src/print_solution.c
        src/print_way.c
        src/push_q.c
        src/reverse_edges.c
        src/rooms.c
        src/solve_map.c)
