cmake_minimum_required(VERSION 3.15)
project(lemin_final C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(libftprintf)

add_executable(lemin_final
    includes/lemin.h
    libft/ft_atoi_base.c
    libft/ft_base_len.c
    libft/ft_countchar.c
    libft/ft_countwordc.c
    libft/ft_delelemofarray.c
    libft/ft_isalnum.c
    libft/ft_isalpha.c
    libft/ft_isascii.c
    libft/ft_isprint.c
    libft/ft_isspace.c
    libft/ft_itoa.c
    libft/ft_join.c
    libft/ft_lstadd.c
    libft/ft_lstdel.c
    libft/ft_lstdelcontent.c
    libft/ft_lstdelone.c
    libft/ft_lstiter.c
    libft/ft_lstmap.c
    libft/ft_lstnew.c
    libft/ft_memalloc.c
    libft/ft_memccpy.c
    libft/ft_memchr.c
    libft/ft_memcmp.c
    libft/ft_memcpy.c
    libft/ft_memdel.c
    libft/ft_memmove.c
    libft/ft_power.c
    libft/ft_printbits.c
    libft/ft_putchar_fd.c
    libft/ft_putendl.c
    libft/ft_putendl_fd.c
    libft/ft_putnbr_fd.c
    libft/ft_putstr_fd.c
    libft/ft_quick_sort.c
    libft/ft_sqrt.c
    libft/ft_strcat.c
    libft/ft_strchr.c
    libft/ft_strchri.c
    libft/ft_strclr.c
    libft/ft_strcmp.c
    libft/ft_strcpy.c
    libft/ft_strdel.c
    libft/ft_strdup.c
    libft/ft_strequ.c
    libft/ft_striter.c
    libft/ft_striteri.c
    libft/ft_strjoin.c
    libft/ft_strlcat.c
    libft/ft_strlenc.c
    libft/ft_strmap.c
    libft/ft_strmapi.c
    libft/ft_strncat.c
    libft/ft_strncmp.c
    libft/ft_strncpy.c
    libft/ft_strnequ.c
    libft/ft_strnew.c
    libft/ft_strnlen.c
    libft/ft_strnstr.c
    libft/ft_strrchr.c
    libft/ft_strsplit.c
    libft/ft_strstr.c
    libft/ft_strsub.c
    libft/ft_strtrim.c
    libft/ft_swap.c
    libft/ft_swap_point.c
    libft/ft_tolower.c
    libft/ft_toupper.c
    libft/ft_twodarraydel.c
    libft/get_next_line.c
    libft/libft.h
    libftprintf/srcs/add_zeroes.c
    libftprintf/srcs/check_if_need_zeroes.c
    libftprintf/srcs/clean.c
    libftprintf/srcs/extract_float.c
    libftprintf/srcs/format_output.c
    libftprintf/srcs/ft_atoi.c
    libftprintf/srcs/ft_bzero.c
    libftprintf/srcs/ft_isblank.c
    libftprintf/srcs/ft_isdigit.c
    libftprintf/srcs/ft_memset.c
    libftprintf/srcs/ft_print_zero_o.c
    libftprintf/srcs/ft_printf.c
    libftprintf/srcs/ft_putchar.c
    libftprintf/srcs/ft_putnbr.c
    libftprintf/srcs/ft_putstr.c
    libftprintf/srcs/ft_strlen.c
    libftprintf/srcs/get_len_float.c
    libftprintf/srcs/get_num_type.c
    libftprintf/srcs/handle_float.c
    libftprintf/srcs/handle_fractional.c
    libftprintf/srcs/handle_whole.c
    libftprintf/srcs/len_num_base.c
    libftprintf/srcs/nbr_has_frac_part.c
    libftprintf/srcs/nbr_has_whole_part.c
    libftprintf/srcs/normalise_frac.c
    libftprintf/srcs/normalise_whole.c
    libftprintf/srcs/output_float.c
    libftprintf/srcs/parse.c
    libftprintf/srcs/parse_flags.c
    libftprintf/srcs/parse_prec.c
    libftprintf/srcs/parse_size.c
    libftprintf/srcs/parse_type.c
    libftprintf/srcs/parse_width.c
    libftprintf/srcs/print.c
    libftprintf/srcs/print_binary.c
    libftprintf/srcs/print_c.c
    libftprintf/srcs/print_d.c
    libftprintf/srcs/print_o.c
    libftprintf/srcs/print_p.c
    libftprintf/srcs/print_percentage.c
    libftprintf/srcs/print_s.c
    libftprintf/srcs/print_space.c
    libftprintf/srcs/print_space_o.c
    libftprintf/srcs/print_u.c
    libftprintf/srcs/print_x.c
    libftprintf/srcs/print_zero.c
    libftprintf/srcs/putnbr_base.c
    libftprintf/srcs/putnbr_float.c
    libftprintf/srcs/round_float.c
    libftprintf/srcs/sum_arr.c
    libftprintf/libftprintf.h
    src/add_one_way.c
    src/add_to_ready_way.c
    src/add_to_way.c
    src/ants.c
    src/bfs_adj_list.c
    src/connectivity_matrix.c
    src/copy_ways_to_sol.c
    src/create_best_sol.c
    src/create_ready_way.c
    src/create_way.c
    src/del_q.c
    src/del_sol.c
    src/del_way.c
    src/delete_intersections.c
    src/distribute_ants.c
    src/empty_q.c
    src/free_all.c
    src/free_ready_ways.c
    src/ft_exit.c
    src/functions.c
    src/get_options.c
    src/initialize_map.c
    src/lemin.c
    src/links.c
    src/matrix_to_adj_list.c
    src/move_ants.c
    src/move_ants_help1.c
    src/parse_map_to_struct.c
    src/part_validation.c
    src/pop_q.c
    src/print_adj_list.c
    src/print_graph.c
    src/print_map.c
    src/print_matrix.c
    src/print_shortest_path.c
    src/print_solution.c
    src/print_way.c
    src/push_q.c
    src/reverse_edges.c
    src/rooms.c
    src/set_ways.c
    src/solve_map.c
    src/solve_map_help1.c)
